# VOID-Secure-Chat

./: README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  lib.rs  main.rs
src-tauri/src/audio/: codec.rs  engine.rs  mod.rs
src-tauri/src/network/: discovery.rs  mod.rs  swarm.rs  utils.rs
src-tauri/src/security/: crypto.rs
src-tauri/src/storage/: db.rs  vault.rs
src-tauri/src/vpn/: tunnel.rs
src/lib/: audio.ts  firebase.ts  stores.ts  webrtc.ts
src/lib/components/: AudioSettings.svelte  Canvas.svelte  Chat.svelte  DraggablePanel.svelte  GlobalCallListener.svelte  MusicPlayer.svelte  OverlayContent.svelte  ScreenShare.svelte  ScreenSharePanel.svelte  ScreenShareSettings.svelte  Settings.svelte  UpdateChecker.svelte  UpdateSplash.svelte  VideoCall.svelte
src/lib/components/layout/: ActiveCallView.svelte  CallControls.svelte  RightPanel.svelte  Sidebar.svelte
src/lib/components/media/: SyncPlayer.svelte
src/lib/components/tools/: StickyBoard.svelte  Vault.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/mini/: +page.svelte
src/routes/note/: +page.svelte
src/routes/overlay/: +page.svelte
