[package]
name = "void"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "void_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }
libp2p = { version = "0.56.0", features = ["tcp", "dns", "websocket", "noise", "yamux", "macros", "tokio", "relay", "identify", "ping", "request-response", "cbor", "serde"] }
quinn = "0.11.9"
anyhow = "1.0.100"
thiserror = "2.0.18"
sled = "0.34.7"
cpal = "0.17.1"
tauri-plugin-store = "2.4.2"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
base64 = "0.22.1"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
tauri-plugin-process = "2"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
